--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
           <input type="radio" name="calf" value="c">Thank you for the wallet.
         </form>
       </div>
+
       <div id="jarDiv">
-        <h5>You've got a little boy. He shows you his butterfly collection plus the killing jar. What do you do?</h5>
+        <h5 class="questionText">You've got a little boy. He shows you his butterfly collection plus the killing jar. What do you do?</h5>
         <form id="jar">
           <input type="radio" name="jar" value="a">That's nice, but why don't you keep the killing jar for yourself?<br>
           <input type="radio" name="jar" value="b">Oh lovely.<br>
@@ -33,15 +34,15 @@
         </form>
       </div>
       <div id="waspDiv">
-        <h5>You're watching television. Suddenly you realize there's a wasp crawling on your arm.</h5>
-        <form id="vacation">
+        <h5 class="questionText">You're watching television. Suddenly you realize there's a wasp crawling on your arm.</h5>
+        <form id="wasp">
           <input type="radio" name="wasp" value="a">I swap it away.<br>
           <input type="radio" name="wasp" value="b">I scream, and grab the closest thing near me and beat the hell out of it. <br>
           <input type="radio" name="wasp" value="c">I kill it.
         </form>
       </div>
       <div id="dogDiv">
-        <h5>You're watching a stage play - a banquet is in progress. The guests are enjoying an appetizer of raw oysters. The entree consists of boiled dog stuffed with rice. The raw oysters are less acceptable to you than a dish of boiled dog. </h5>
+        <h5 class="questionText">You're watching a stage play - a banquet is in progress. The guests are enjoying an appetizer of raw oysters. The entree consists of boiled dog stuffed with rice. The raw oysters are less acceptable to you than a dish of boiled dog. </h5>
         <form id="dog">
           <input type="radio" name="dog" value="a">Not true.<br>
           <input type="radio" name="dog" value="b">Disgusting!<br>
@@ -49,7 +50,7 @@
         </form>
       </div>
       <div id="tortDiv">
-        <h5>You're in a desert walking along in the sand when all of the sudden you look down, and you see a tortoise, it's crawling toward you. You reach down, you flip the tortoise over on it's back. The tortoise lays on it's back, it's belly baking in the hot sun, beating it's legs trying to turn it'self over, but it can't, not without your help. But you're not helping. Why is that?</h5>
+        <h5 class="questionText">You're in a desert walking along in the sand when all of the sudden you look down, and you see a tortoise, it's crawling toward you. You reach down, you flip the tortoise over on it's back. The tortoise lays on it's back, it's belly baking in the hot sun, beating it's legs trying to turn it'self over, but it can't, not without your help. But you're not helping. Why is that?</h5>
         <form id="tortoise">
           <input type="radio" name="tortoise" value="a">I swap it away.<br>
           <input type="radio" name="tortoise" value="b">I scream, and grab the closest thing near me and beat the hell out of it. <br>
