--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
   <script src="js/scripts.js"></script>
   <meta charset="utf-8">
 </head>
-<div class="bgimage">
-  <div class="container">
-    <div class="jumbotron">
-      <h3>Which programming language is best for me?</h3>
-      <br>
-      <h4>Answer These Questions to Find Your Match:</h4>
-    </div>
-    <div class="container" id="questions">
-      <div id="calfDiv">
-        <h5>It's your birthday. Someone gives you a calfskin wallet. How do you react?</h5>
-        <form id="calf">
-          <input type="radio" name="calf" value="a">I would appreciate it. <br>
-          <input type="radio" name="calf" value="b">I wouldn't accept it. <br>
-          <input type="radio" name="calf" value="c">Thank you for the wallet.
-        </form>
+
+<body>
+  <div class="bgimage">
+    <div class="container">
+      <div class="jumbotron">
+        <h3>Which programming language is best for me?</h3>
+        <br>
+        <h4>Answer These Questions to Find Your Match:</h4>
       </div>
 
+      <div class="container" id="questions">
+        <div id="calfDiv">
+          <p>It's your birthday. Someone gives you a calfskin wallet. How do you react?</p>
+          <form id="calf">
+            <input type="radio" name="calf" value="a">I would appreciate it. <br>
+            <input type="radio" name="calf" value="b">I wouldn't accept it. <br>
+            <input type="radio" name="calf" value="c">Thank you for the wallet.
+          </form>
+        </div>
       <div id="jarDiv">
-        <h5 class="questionText">You've got a little boy. He shows you his butterfly collection plus the killing jar. What do you do?</h5>
+        <p class="questionText">You've got a little boy. He shows you his butterfly collection plus the killing jar. What do you do?</p>
         <form id="jar">
           <input type="radio" name="jar" value="a">That's nice, but why don't you keep the killing jar for yourself?<br>
           <input type="radio" name="jar" value="b">Oh lovely.<br>
@@ -34,7 +36,7 @@
         </form>
       </div>
       <div id="waspDiv">
-        <h5 class="questionText">You're watching television. Suddenly you realize there's a wasp crawling on your arm.</h5>
+        <p class="questionText">You're watching television. Suddenly you realize there's a wasp crawling on your arm.</p>
         <form id="wasp">
           <input type="radio" name="wasp" value="a">I swap it away.<br>
           <input type="radio" name="wasp" value="b">I scream, and grab the closest thing near me and beat the hell out of it. <br>
@@ -42,7 +44,7 @@
         </form>
       </div>
       <div id="dogDiv">
-        <h5 class="questionText">You're watching a stage play - a banquet is in progress. The guests are enjoying an appetizer of raw oysters. The entree consists of boiled dog stuffed with rice. The raw oysters are less acceptable to you than a dish of boiled dog. </h5>
+        <p class="questionText">You're watching a stage play - a banquet is in progress. The guests are enjoying an appetizer of raw oysters. The entree consists of boiled dog stuffed with rice. The raw oysters are less acceptable to you than a dish of boiled dog. </p>
         <form id="dog">
           <input type="radio" name="dog" value="a">Not true.<br>
           <input type="radio" name="dog" value="b">Disgusting!<br>
@@ -50,20 +52,22 @@
         </form>
       </div>
       <div id="tortDiv">
-        <h5 class="questionText">You're in a desert walking along in the sand when all of the sudden you look down, and you see a tortoise, it's crawling toward you. You reach down, you flip the tortoise over on it's back. The tortoise lays on it's back, it's belly baking in the hot sun, beating it's legs trying to turn it'self over, but it can't, not without your help. But you're not helping. Why is that?</h5>
+        <p class="questionText">You're in a desert walking along in the sand when all of the sudden you look down, and you see a tortoise, it's crawling toward you. You reach down, you flip the tortoise over on it's back. The tortoise lays on it's back, it's belly baking in
+          the hot sun, beating it's legs trying to turn it'self over, but it can't, not without your help. But you're not helping. Why is that?</p>
         <form id="tortoise">
           <input type="radio" name="tortoise" value="a">I swap it away.<br>
           <input type="radio" name="tortoise" value="b">I scream, and grab the closest thing near me and beat the hell out of it. <br>
           <input type="radio" name="tortoise" value="c">I kill it.
         </form>
       </div>
-
+    </div>
+      <div class="resultBox">
+        <div id="resultDiv">
+          <h2 id="answer"></h2>
+        </div>
+      </div>
     </div>
   </div>
-  <div id="resultDiv">
-    <p id="answer">might be the language for you.</p>
-  </div>
-</div>
-</div>
+</body>
 
 </html>
